text alignment fix at banner

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -100,7 +100,7 @@ span {
 }
 
 h1 {
-  font-size: 3.75rem;
+  font-size: 3.5rem;
   line-height: normal;
   font-family: 'Montserrat', sans-serif;
 
